# Social-Bias-Benchmark

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .pylintrc  MULTI_GPU_SETUP.md  PERFORMANCE.md  Readme.md  TESTING_STRATEGY.md  TODO.md  accelerate_config.yaml  accelerate_config_dynamic.yaml  benchmark.session.sql  cuda_env.sh  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  fix-traefik.sh  personas.db  pyproject.toml  pytest.ini  requirements.txt  start_single_gpu.sh  start_slurm_job.sh  submit_gpu_test.sh
apps/analysis/: pyproject.toml
apps/analysis/src/analysis/: __init__.py
apps/analysis/src/analysis/benchmarks/: analytics.py  run_benchmark_analysis.py  run_counterfactual_analysis.py
apps/analysis/src/analysis/persona/: analytics.py  run_dataset_analysis.py  run_persona_analysis.py
apps/backend/: QUEUE_README.md  pyproject.toml  requirements.txt
apps/backend/src/backend/infrastructure/: logging_config.py
apps/backend/tests/: conftest.py
apps/backend/tests/benchmark/: test_integration_full_pipeline.py
apps/backend/tests/integration/: test_queue_executor.py  test_resume_logic.py  test_retry_and_failure_tracking.py  test_retry_mechanism_detailed.py
apps/backend/tests/persona/: test_sampler_base.py  test_sexuality_sampler.py
apps/backend/tests/unit/llm/: test_vllm_client.py
apps/benchmark/: pyproject.toml  requirements.txt  setup.py
apps/benchmark/src/benchmark/: benchmark.py  main.py
apps/benchmark/tests/: test_integration_full_pipeline.py  test_persona_reader.py
(+456 files in other folders)
