[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis"
version = "0.1.3"
description = "Analysis utilities for the Social Bias Benchmark personas and results."
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "peewee",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
maps = [
    "plotly>=5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
