[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sbb-backend"
version = "0.1.0"
description = "Layered backend for the Social Bias Benchmark"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend*"]
