[project]
name = "benchmark"
version = "0.1"
dependencies = [
    "numpy",
    "requests",
    "python-dotenv",
    "huggingface_hub",
    "transformers",
    "torch",
    "pandas",
    "bitsandbytes",
    "accelerate",
    "sentencepiece",
    "protobuf",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]